# hal_nuvoton

./: CMakeLists.txt
m0a2x/: CMakeLists.txt
m0a2x/StdDriver/: CMakeLists.txt
